# heartlib-colab

./: README.md  heartlib_colab.ipynb  pyproject.toml
inputs/: lyrics.txt  tags.txt
scripts/: run_generation.py  setup_colab.sh
